Amend base.css to fix mobile alignment
Products header missing on mobile pages.
Add media query to push header down on screens under 991px

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,6 @@ html {
 body {
     height: calc(100vh - 164px);
     color: #555;
-    font-family: 'Lato';
 }
 
 /* from Bulma */
@@ -120,4 +119,15 @@ body {
     .header-container {
         padding-top: 164px;
     }
+}
+
+/* Extra padding for nav bar when collapsed */
+@media (max-width: 991px) {
+  .header-container {
+      padding-top: 116px;
+  }
+
+  body {
+      height: calc(100vh - 116px);
+  }
 }
